--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,30 @@
 .footer {
-    color: white;
     background-color: black;
-    padding: 32px 48px;
+    width: 100%;
+}
+
+.footer_container {
+    max-width: 1440px;
+    margin: 0 auto;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 32px 0px;
+}
+
+.logo {
+    width: 250px;   /* Tamaño visible deseado */
+    height: 80px;
+    overflow: hidden;
+
+    & > img {
+        width: 100%;
+    height: 100%;
+    object-fit: cover;        /* Rellena el contenedor cortando lo que sobra */
+    object-position: center;  /* Centra la imagen en el contenedor */
+    filter: invert(1) brightness(2);
+    }
 }
 
 .company_name {
@@ -52,10 +72,10 @@
 }
 
 
-@media only screen and (max-width: 1024px) {
-    .company_name {
-        font-size: 22px;
-        text-align: center  ;
+@media only screen and (max-width: 768px) {
+    .footer_container {
+        flex-direction: column-reverse;
+        gap: 32px;
     }
 }
 
