--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,35 @@
 .header {
-    padding: 32px 48px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
     box-shadow: 0px 8px 13px 0px rgba(115,115,115,0.67);
     -webkit-box-shadow: 0px 8px 13px 0px rgba(115,115,115,0.67);
     -moz-box-shadow: 0px 8px 13px 0px rgba(115,115,115,0.67);
-    position: relative;
     position: sticky;
     top: 0;
     background-color: #fff;
+    z-index: 1;
+}
+
+.header_container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 32px 0;
+    max-width: 1440px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 250px;   /* Tamaño visible deseado */
+    height: 80px;
+    overflow: hidden;
+
+    & > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;        /* Rellena el contenedor cortando lo que sobra */
+        object-position: center;  /* Centra la imagen en el contenedor */
+    }
 }
 
 .menu_icon {
@@ -37,23 +57,11 @@
     transform: scale(1.1);
 }
 
-.company_name {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 32px;
-    font-family: "Playfair Display", serif;
-}
-
-
-
 @media only screen and (max-width: 1550px) {
     .company_name {
       position: relative;
     }
 }
-
-
 
 @media only screen and (max-width: 1440px) {
     .nav_list {
@@ -86,12 +94,13 @@
 }
 
 
+@media only screen and (max-width: 768px) {
+    .header_container {
+        padding: 0;
+    }
+}
 @media only screen and (max-width: 425px) {
     .header {
         padding: 16px;
     }
-    .logo {
-        display: none
-    }
-
 }
