--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,8 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%; 
   -moz-text-size-adjust: 100%; 
+  scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
@@ -44,10 +46,12 @@ ul, ol {
 .page_wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* 100% de la altura de la ventana */
 }
 
 .content {
   flex-grow: 1; /* Toma todo el espacio disponible */
-  padding: 20px;
+  padding: 20px 0;
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
 }
