--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -17,8 +17,9 @@
 .company_container {
     display: flex;
     gap: 16px;
-    justify-content: end;
-    align-items: end;
+    /* justify-content: end; */
+    /* align-items: end; */
+    justify-content: center;
 }
 
 .letter_company, .company_name, .slogan {
